# patrom

./: Makefile  README.md  install-depends.txt  pyproject.toml
src/patrom/: Compiler.py  main.py
tests/: base.expect  base.json  base.tmpl  pwd_db.expect  pwd_db.json  pwd_db.tmpl  test.c
